# ISO8583

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: constants.h  iso8583.h  settings.h
